--- a/app.css
+++ b/app.css
@@ -13,6 +13,7 @@
 	--second-color: #3a3a3a;
 	--txt-color: #bbbbbb;
 	--txt-white: #ffffff;
+	--bg-black: #000;
 
 	--header-height: 144px;
 	--header-padding: 93px;
@@ -58,12 +59,13 @@ header {
 	justify-content: space-between;
 	padding: 0 var(--header-padding);
 	z-index: 99;
-	transition: height 0.3s ease 0s;
+	transition: height 0.3s ease 0s, background-color 0.3s ease 0s;
 }
 
 header.shrink {
 	height: 60px;
 	background-color: var(--second-color);
+	opacity: 0.97;
 }
 
 .main-menu-wrapper {
@@ -262,4 +264,158 @@ header.shrink {
 
 .slide-control > li:hover {
 	color: var(--txt-white);
+}
+
+/* Category Section */
+.section {
+	padding: 12rem 0 0;
+}
+
+.section-content {
+	padding: 7rem 7rem 0;
+}
+
+.section-title {
+	font-family: BerlinSansFBDemiBold;
+	text-align: center;
+	position: relative;
+}
+
+.section-title > h3 {
+	text-transform: uppercase;
+}
+
+.second-title {
+	font-size: 5rem;
+	color: var(--second-color);
+	position: absolute;
+	left: 24%;
+	bottom: 40%;
+	z-index: -1;
+}
+
+.main-title {
+	font-size: 3.5rem;
+	z-index: 1;
+}
+
+.category-img {
+	padding: 4rem;
+	height: 600px;
+	overflow: hidden;
+	position: relative;
+	cursor: pointer;
+}
+
+.category-img-inner {
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	background-position: bottom;
+	background-size: cover;
+	transition: transform 1s ease 0s;
+}
+
+.category-title {
+	font-size: 4.5rem;
+	font-weight: 700;
+	padding: 2rem;
+	position: absolute;
+	transform: translateX(-30%);
+	bottom: 0;
+	color: var(--txt-color);
+	text-transform: capitalize;
+	transition: transform 0.5s ease 0s;
+}
+
+.category-img:hover .category-img-inner {
+	transform: scale(1.1);
+}
+
+.category-img:hover .category-title {
+	color: var(--txt-white);
+	transform: translateX(50%);
+}
+
+/* btn */
+.btn-wrapper {
+	position: absolute;
+	right: 7rem;
+	top: 50%;
+	transform: translateY(-50%);
+}
+
+.btn {
+	padding: 0.5rem 1rem;
+	border: none;
+	outline: none;
+	text-transform: uppercase;
+	font-weight: 700;
+	cursor: pointer;
+	background-color: var(--second-color);
+	color: var(--txt-white);
+	transition: all 0.3s ease 0s;
+}
+
+.btn:hover {
+	background-color: var(--txt-white);
+	color: var(--main-color);
+}
+
+/* product */
+.product-card {
+	padding: 20px;
+	text-align: center;
+}
+
+.product-card-img {
+	margin-bottom: 20px;
+}
+
+.product-card-img img {
+	transform: rotate(0) scale(1);
+	transition: transform 0.5s ease 0s;
+}
+
+.product-card:hover .product-card-img img {
+	transform: rotate(-10deg) scale(1.12);
+}
+
+.product-card:hover .product-name {
+	color: var(--txt-white);
+}
+
+.product-name {
+	font-size: 2rem;
+	text-transform: uppercase;
+	margin-bottom: 10px;
+	color: var(--txt-color);
+	transition: all 0.5s ease 0s;
+}
+
+.product-card-large .product-name {
+	font-size: 3rem;
+}
+
+.product-price {
+	font-weight: 700;
+	color: var(--txt-white);
+	margin-bottom: 20px;
+	display: block;
+}
+
+.product-card-large .product-price {
+	font-size: 2rem;
+}
+
+.product-card-large .btn {
+	font-size: 1.5rem;
+	padding: 1rem 2rem;
+}
+
+.col-center {
+	display: flex;
+	align-items: center;
 }
