--- a/app.css
+++ b/app.css
@@ -419,3 +419,48 @@ header.shrink {
 	display: flex;
 	align-items: center;
 }
+.special-section {
+	position: relative;
+	margin-bottom: 290px;
+	padding-top: 4rem;
+}
+
+.special-section > .section-title {
+	text-align: right;
+	padding: 4rem 7rem;
+	background-color: var(--bg-black);
+}
+
+.special-section .second-title {
+	position: relative;
+	font-size: 3.5rem;
+	color: var(--txt-white);
+	left: 0;
+	z-index: unset;
+}
+
+.special-section .main-title {
+	font-size: 9rem;
+	-webkit-text-stroke-width: 2px;
+	-webkit-text-fill-color: transparent;
+}
+
+.special-section .second-title .btn {
+	position: relative;
+	right: unset;
+	top: unset;
+	font-size: 2rem;
+}
+
+.special-section .special-price {
+	font-size: 3rem;
+	color: var(--txt-white);
+	margin-bottom: 2rem;
+}
+
+.special-img {
+	width: 50%;
+	position: absolute;
+	left: 7rem;
+	bottom: -290px;
+}
