--- a/app.css
+++ b/app.css
@@ -505,3 +505,102 @@ header.shrink {
 	font-size: 2rem;
 	color: var(--txt-white);
 }
+
+/* Footer section */
+footer {
+	background-color: var(--second-color);
+	margin-top: 90px;
+	padding-bottom: 60px;
+}
+
+.footer-description {
+	margin: 30px 0;
+}
+
+.socials {
+	display: flex;
+}
+
+.socials > li ~ li {
+	margin-left: 20px;
+}
+
+.socials > li > a {
+	font-size: 1.5rem;
+}
+
+.socials > li > a:hover {
+	color: var(--txt-white);
+}
+
+/* footer */
+.footer-menu > li ~ li {
+	margin-top: 20px;
+}
+
+.footer-menu > li > a {
+	font-size: 1.5rem;
+	text-transform: uppercase;
+}
+
+.footer-menu > li > a:hover {
+	color: var(--txt-white);
+}
+
+/* subcribe */
+
+.subcribe-form > input {
+	border: none;
+	outline: none;
+	padding: 10px 20px;
+}
+
+.footer-header {
+	font-size: 1.5rem;
+	text-transform: uppercase;
+	color: var(--txt-color);
+}
+
+.to-right {
+	transform: translateX(-200px);
+}
+
+.to-left {
+	transform: translateX(200px);
+}
+
+.to-right,
+.to-left,
+.to-top {
+	opacity: 0;
+	transition: all 1.5s ease 0s;
+}
+
+.to-right.show,
+.to-left.show {
+	opacity: 1;
+	transform: translateX(0);
+}
+
+.to-top {
+	transform: translateY(100px);
+}
+
+.to-top.show {
+	transform: translateY(0);
+	opacity: 1;
+}
+
+/* copy right */
+.copy-right {
+	height: auto;
+}
+
+.copy-right > p {
+	padding: 5px 0;
+	text-align: center;
+}
+
+.copy-right > p > a:hover {
+	color: var(--txt-white);
+}
